@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*froxlor-0.9.15 (29 Nov 2010)
+
+  29 Nov 2010; Froxlor Release Team <release@froxlor.org>
+  -froxlor-0.9.14.ebuild, +froxlor-0.9.15.ebuild:
+  version bump
+
   29 Nov 2010; Froxlor Release Team <release@froxlor.org> froxlor-9999.ebuild,
   +files/aliases:
   fix #412
